<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@color/purple_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/ivLogo"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tvHospitalName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/hospital_name"
            app:layout_constraintStart_toEndOf="@id/ivLogo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvHospitalAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/hospital_address"
            app:layout_constraintStart_toEndOf="@id/ivLogo"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>