<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.RegistrationActivity">

    <include
        android:id="@+id/lyToolbar"
        layout="@layout/toolbar_main" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/btnRegistrasi"
        android:layout_below="@id/lyToolbar">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingTop="20dp"
            android:paddingEnd="24dp">


            <TextView
                android:id="@+id/tvNama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="2dp"
                android:text="@string/nama_pasien"
                android:textColor="@color/color_grey_3D505C"
                android:textSize="@dimen/text_14" />

            <EditText
                android:id="@+id/etNama"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/expression_edit_text_bgc_selector"
                android:focusableInTouchMode="true"
                android:hint="Ardi"
                android:inputType="textPersonName"
                android:lineSpacingExtra="2sp"
                android:textColorHint="@color/color_grey_C2CED6"
                android:textSize="@dimen/text_16" />

            <TextView
                android:id="@+id/tvDokter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="2dp"
                android:text="@string/pilih_dokter"
                android:textColor="@color/color_grey_3D505C"
                android:textSize="@dimen/text_14" />

            <EditText
                android:id="@+id/etDokter"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/expression_edit_text_bgc_selector"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="Dokter"
                android:inputType="text"
                android:lineSpacingExtra="2sp"
                android:textColorHint="@color/color_grey_C2CED6"
                android:textSize="@dimen/text_16" />


            <TextView
                android:id="@+id/tvGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="2dp"
                android:text="@string/jenis_kelamin"
                android:textColor="@color/color_grey_3D505C"
                android:textSize="@dimen/text_14" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerGender"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:spinnerMode="dropdown" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_down" />

            </RelativeLayout>


            <TextView
                android:id="@+id/tvTempatLahir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="2dp"
                android:text="@string/tempat_lahir"
                android:textColor="@color/color_grey_3D505C"
                android:textSize="@dimen/text_14" />


            <EditText
                android:id="@+id/etTempatLahir"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/expression_edit_text_bgc_selector"
                android:focusableInTouchMode="true"
                android:hint="Jakarta"
                android:inputType="text"
                android:lineSpacingExtra="2sp"
                android:textColorHint="@color/color_grey_C2CED6"
                android:textSize="@dimen/text_16" />


            <TextView
                android:id="@+id/tvTanggalLahir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="2dp"
                android:text="@string/tanggal_lahir"
                android:textColor="@color/color_grey_3D505C"
                android:textSize="@dimen/text_14" />


            <EditText
                android:id="@+id/etTanggalLahir"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/expression_edit_text_bgc_selector"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="01-03-1996"
                android:inputType="text"
                android:lineSpacingExtra="2sp"
                android:textColorHint="@color/color_grey_C2CED6"
                android:textSize="@dimen/text_16" />


            <TextView
                android:id="@+id/tvNoHandphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="2dp"
                android:text="@string/no_handphone_whatsapp"
                android:textColor="@color/color_grey_3D505C"
                android:textSize="@dimen/text_14" />


            <EditText
                android:id="@+id/etNoHandphone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/expression_edit_text_bgc_selector"
                android:focusableInTouchMode="true"
                android:hint="081234599999"
                android:inputType="phone"
                android:lineSpacingExtra="2sp"
                android:maxLength="13"
                android:textColorHint="@color/color_grey_C2CED6"
                android:textSize="@dimen/text_16" />


            <TextView
                android:id="@+id/tvPekerjaan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="2dp"
                android:text="@string/pekerjaan"
                android:textColor="@color/color_grey_3D505C"
                android:textSize="@dimen/text_14" />


            <EditText
                android:id="@+id/etPekerjaan"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/expression_edit_text_bgc_selector"
                android:focusableInTouchMode="true"
                android:hint="Karyawan Swasta"
                android:inputType="text"
                android:lineSpacingExtra="2sp"
                android:textColorHint="@color/color_grey_C2CED6"
                android:textSize="@dimen/text_16" />

            <TextView
                android:id="@+id/tvPenanggungJawab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="2dp"
                android:text="@string/penanggung_jawab"
                android:textColor="@color/color_grey_3D505C"
                android:textSize="@dimen/text_14" />


            <EditText
                android:id="@+id/etPenanggungJawab"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/expression_edit_text_bgc_selector"
                android:focusableInTouchMode="true"
                android:hint="Hidayat"
                android:inputType="textPersonName"
                android:lineSpacingExtra="2sp"
                android:textColorHint="@color/color_grey_C2CED6"
                android:textSize="@dimen/text_16" />


            <TextView
                android:id="@+id/tvAlamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="2dp"
                android:text="@string/alamat"
                android:textColor="@color/color_grey_3D505C"
                android:textSize="@dimen/text_14" />


            <EditText
                android:id="@+id/etAlamat"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/expression_edit_text_bgc_selector"
                android:focusableInTouchMode="true"
                android:hint="Jl. Raya Bogor"
                android:inputType="text"
                android:lineSpacingExtra="2sp"
                android:textColorHint="@color/color_grey_C2CED6"
                android:textSize="@dimen/text_16" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <Button
        android:id="@+id/btnRegistrasi"
        style="@style/ButtonGrey.Round"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:text="@string/registrasi"
        android:textSize="@dimen/text_14"
        android:textStyle="normal" />


</RelativeLayout>