<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.activity.DetailHistoryActivity">

    <include layout="@layout/toolbar_detail" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/view_receipt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/image"
                android:src="@drawable/logo_rs" />

            <TextView
                android:id="@+id/tv_nama_merchant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:lineSpacingExtra="2dp"
                android:text="@string/hospital_name"
                android:textColor="@color/color_grey_1F282E"
                android:textSize="@dimen/text_16" />

            <TextView
                android:id="@+id/tv_alamat_merchant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:lineSpacingExtra="2dp"
                android:text="@string/hospital_address"
                android:textColor="@color/color_grey_3D505C"
                android:textSize="@dimen/text_14" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <include layout="@layout/partial_detail" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="40dp"
                    android:layout_height="1dp"
                    android:background="@color/color_blue_056EB5"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/tvFooter"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvFooter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="2sp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/semoga_lekas_sembuh"
                    android:textColor="@color/color_blue_056EB5"
                    android:textSize="@dimen/text_14"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="40dp"
                    android:layout_height="1dp"
                    android:background="@color/color_blue_056EB5"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/tvFooter"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</LinearLayout>